<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>com.city.atm</groupId>
    <artifactId>ListCityATM</artifactId>
    <packaging>war</packaging>
    <version>1.0.0</version>
    <name>ListCityATM Maven Webapp</name>

    <properties>
        <java.version>1.8</java.version>
        <apache.camel.version>2.24.0</apache.camel.version>
        <apache.taglibs.version>1.2.5</apache.taglibs.version>
        <fasterxml.jackson.version>2.9.10</fasterxml.jackson.version>
        <org.springsecurity.version>4.2.10.RELEASE</org.springsecurity.version>
        <org.springframework.version>4.3.25.RELEASE</org.springframework.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    </properties>

    <dependencies>
        <!-- Spring Framework dependencies -->
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-aop</artifactId>
            <version>${org.springframework.version}</version>
        </dependency>

        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-aspects</artifactId>
            <version>${org.springframework.version}</version>
        </dependency>

        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-beans</artifactId>
            <version>${org.springframework.version}</version>
        </dependency>		

        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-context</artifactId>
            <version>${org.springframework.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>commons-logging</groupId>
                    <artifactId>commons-logging</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-context-support</artifactId>
            <version>${org.springframework.version}</version>
        </dependency>

        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-core</artifactId>
            <version>${org.springframework.version}</version>
        </dependency>

        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-expression</artifactId>
            <version>${org.springframework.version}</version>
        </dependency>

        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-jdbc</artifactId>
            <version>${org.springframework.version}</version>
        </dependency>

        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-jms</artifactId>
            <version>${org.springframework.version}</version>
        </dependency>

        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-orm</artifactId>
            <version>${org.springframework.version}</version>
        </dependency>

        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-tx</artifactId>
            <version>${org.springframework.version}</version>
        </dependency>

        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-web</artifactId>
            <version>${org.springframework.version}</version>
        </dependency>

        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-test</artifactId>
            <version>${org.springframework.version}</version>
        </dependency>

        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-webmvc</artifactId>
            <version>${org.springframework.version}</version>
        </dependency>
		
        <!-- Spring Security dependencies -->
        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-core</artifactId>
            <version>${org.springsecurity.version}</version>
        </dependency>

        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-web</artifactId>
            <version>${org.springsecurity.version}</version>
        </dependency>

        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-taglibs</artifactId>
            <version>${org.springsecurity.version}</version>
        </dependency>

        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-config</artifactId>
            <version>${org.springsecurity.version}</version>
        </dependency>

        <!-- Hibernate dependencies -->
        <dependency>
            <groupId>org.hibernate</groupId>
            <artifactId>hibernate-core</artifactId>
            <version>4.3.2.Final</version>
        </dependency>

        <dependency>
            <groupId>org.hibernate</groupId>
            <artifactId>hibernate-entitymanager</artifactId>
            <version>4.3.2.Final</version>
        </dependency>

        <dependency>
            <groupId>org.hibernate</groupId>
            <artifactId>hibernate-validator</artifactId>
            <version>4.3.2.Final</version>
        </dependency>

        <dependency>			
            <groupId>org.hibernate</groupId>
            <artifactId>hibernate-infinispan</artifactId>
            <version>4.3.2.Final</version>		
        </dependency>

        <dependency>
            <groupId>org.hibernate.common</groupId>
            <artifactId>hibernate-commons-annotations</artifactId>
            <version>4.0.5.Final</version>
        </dependency>

        <dependency>
            <groupId>org.hibernate.javax.persistence</groupId>
            <artifactId>hibernate-jpa-2.1-api</artifactId>			
            <version>1.0.0.Final</version>
        </dependency>

        <!-- Java Servlet API dependencies -->
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>javax.servlet-api</artifactId>
            <version>3.1.0</version>
            <scope>provided</scope>
        </dependency>
		
        <dependency>
            <groupId>javax.servlet.jsp</groupId>
            <artifactId>javax.servlet.jsp-api</artifactId>
            <version>2.3.1</version>
            <scope>provided</scope>
        </dependency>
		
        <dependency>
            <groupId>javax.el</groupId>
            <artifactId>javax.el-api</artifactId>
            <version>3.0.0</version>
            <scope>provided</scope>			
        </dependency>

        <!-- MySQL dependency-->
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>5.1.40</version>
        </dependency>

        <!-- JUnit dependency -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>

        <!-- Fasterxml jackson dependencies -->
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-core</artifactId>
            <version>${fasterxml.jackson.version}</version>
        </dependency>

        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-annotations</artifactId>
            <version>${fasterxml.jackson.version}</version>
        </dependency>

        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${fasterxml.jackson.version}</version>
        </dependency>

        <!-- Apache taglibs dependencies -->
        <dependency>
            <groupId>org.apache.taglibs</groupId>
            <artifactId>taglibs-standard-impl</artifactId>
            <version>${apache.taglibs.version}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.taglibs</groupId>
            <artifactId>taglibs-standard-spec</artifactId>
            <version>${apache.taglibs.version}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.taglibs</groupId>
            <artifactId>taglibs-standard-jstlel</artifactId>
            <version>${apache.taglibs.version}</version>
        </dependency>

        <!-- Apache camel dependencies -->
        <dependency>
            <groupId>org.apache.camel</groupId>
            <artifactId>camel-core</artifactId>
            <version>${apache.camel.version}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.camel</groupId>
            <artifactId>camel-spring</artifactId>
            <version>${apache.camel.version}</version>
        </dependency>
    </dependencies>

    <build>
        <finalName>${project.artifactId}</finalName>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-dependency-plugin</artifactId>
                    <version>3.1.1</version>
                    <configuration>
                        <fork>true</fork>
                        <encoding>${project.build.sourceEncoding}</encoding>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.6.0</version>
                    <configuration>
                        <fork>true</fork>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                        <encoding>${project.build.sourceEncoding}</encoding>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>3.0.1</version>
                    <configuration>
                        <encoding>${project.build.sourceEncoding}</encoding>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-war-plugin</artifactId>
                    <version>3.2.2</version>
                    <configuration>
                        <warSourceDirectory>src/main/webapp</warSourceDirectory>
                        <!-- <webXml>src/main/webapp/WEB-INF/web.xml</webXml> -->
                        <warName>${project.artifactId}</warName>
                        <failOnMissingWebXml>false</failOnMissingWebXml>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.tomcat.maven</groupId>
                    <artifactId>tomcat7-maven-plugin</artifactId>
                    <version>2.2</version>
                    <configuration>
                        <server>TomcatServer</server>
                        <port>8080</port>
                        <path>/${project.artifactId}</path>
                        <url>http://localhost:8080/${project.artifactId}</url>
                        <jarScanAllDirectories>false</jarScanAllDirectories>
                        <systemProperties>
                            <org.apache.jasper.compiler.TldLocationsCache.level>FINE</org.apache.jasper.compiler.TldLocationsCache.level>
                            <org.apache.catalina.startup.TldConfig.jarsToSkip>*.jar</org.apache.catalina.startup.TldConfig.jarsToSkip>
                            <org.apache.catalina.startup.ContextConfig.jarsToSkip>*.jar</org.apache.catalina.startup.ContextConfig.jarsToSkip>
                            <tomcat.util.scan.DefaultJarScanner.jarsToSkip>*.jar</tomcat.util.scan.DefaultJarScanner.jarsToSkip>                            
                        </systemProperties>
                    </configuration>
                    <!-- http://mvnrepository.com/artifact/org.apache.tomcat.maven/tomcat7-maven-plugin -->
                </plugin>
                <plugin>
                    <groupId>org.eclipse.jetty</groupId>
                    <artifactId>jetty-maven-plugin</artifactId>
                    <version>9.2.21.v20170120</version>
                    <configuration>
                        <war>${basedir}/target/${project.artifactId}.war</war>
                        <webAppConfig>
                            <allowDuplicateFragmentNames>true</allowDuplicateFragmentNames>
                            <contextPath>/${project.artifactId}</contextPath>
                            <descriptor>${basedir}/target/${project.artifactId}/WEB-INF/web.xml</descriptor>
                        </webAppConfig>
                        <httpConnector>
                            <port>8080</port>
                        </httpConnector>
                    </configuration>
                    <!-- Jetty version <= 9.2.x requires Java 7 while Jetty version >= 9.3.x requires Java 8. -->
                    <!-- http://mvnrepository.com/artifact/org.eclipse.jetty/jetty-maven-plugin -->
                </plugin>
                <plugin>
                    <groupId>org.apache.tomee.maven</groupId>
                    <artifactId>tomee-maven-plugin</artifactId>
                    <version>8.0.0</version>
                    <configuration>
                        <!-- Which flavor of TomEE to use? webprofile, plus, plume e.t.c default = webprofile -->
                        <tomeeClassifier>plume</tomeeClassifier>
                        <args>-Xmx512m -XX:PermSize=256m</args>
                    </configuration>
                    <!-- https://mvnrepository.com/artifact/org.apache.tomee.maven/tomee-maven-plugin -->
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-eclipse-plugin</artifactId>
                    <version>2.10</version>
                    <configuration>
                        <downloadSources>false</downloadSources>
                        <downloadJavadocs>false</downloadJavadocs>
                        <wtpversion>2.0</wtpversion>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>com.heroku.sdk</groupId>
                    <artifactId>heroku-maven-plugin</artifactId>
                    <version>2.0.10</version>
                    <configuration>
                        <appName>calm-forest-59738</appName>
                        <jdkVersion>${java.version}</jdkVersion>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <profiles>
        <profile>
            <!-- This "deploy-war" profile is used for copying this projects' war file to Wildfly Server >= 8.0.0.Final
                using this command: mvn clean package antrun:run -Pdeploy-war -->
            <id>deploy-war</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-antrun-plugin</artifactId>
                        <version>1.8</version>
                        <executions>
                            <execution>
                                <id>default-cli</id>
                                <configuration>
                                    <encoding>${project.build.sourceEncoding}</encoding>
                                    <target name="deploy.war.to.wildfly" description="deploying war file to wildfly server">
                                        <echo>Deploying war file to wildfly...</echo>
                                        <copy todir="${JBOSS_HOME}/standalone/deployments/" overwrite="true" flatten="true">
                                            <fileset dir="${basedir}/target/">
                                                <include name="${project.artifactId}.war" />
                                            </fileset>
                                        </copy>
                                    </target>
                                </configuration>
                                <goals>
                                    <goal>run</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <!-- This "delete-war" profile is used for deleting this projects' war file from Wildfly Server >= 8.0.0.Final
                using this command: mvn clean antrun:run -Pdelete-war -->
            <id>delete-war</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-antrun-plugin</artifactId>
                        <version>1.8</version>
                        <executions>
                            <execution>
                                <id>default-cli</id>
                                <configuration>
                                    <encoding>${project.build.sourceEncoding}</encoding>
                                    <target name="delete.war.from.wildfly" description="deleting war file from wildfly server">
                                        <echo>Deleting war file from wildfly...</echo>
                                        <delete includeEmptyDirs="true" verbose="true">
                                            <fileset dir="${JBOSS_HOME}/standalone/deployments/">
                                                <include name="**/*.war.dodeployed"/>
                                                <include name="**/*.ear.dodeployed"/>
                                                <include name="**/*.war.deployed"/>
                                                <include name="**/*.ear.deployed"/>
                                                <include name="**/*.war.failed"/>
                                                <include name="**/*.ear.failed"/>
                                                <include name="**/*.war"/>
                                                <include name="**/*.ear"/>
                                            </fileset>
                                        </delete>
                                        <delete dir="${JBOSS_HOME}/standalone/log" verbose="true" />
                                        <delete dir="${JBOSS_HOME}/standalone/tmp" verbose="true" />
                                        <delete dir="${JBOSS_HOME}/standalone/work" verbose="true" />
                                    </target>
                                </configuration>
                                <goals>
                                    <goal>run</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>